[package]
name = "diesel_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.5", features = ["postgres", "64-column-tables"] }
dotenv = "0.15.0"
rand = "0.8.4"
polars = "0.39.2"


[[bin]]
name = "diesel_poc_binary"
path = "src/main.rs"